Fixed the homework logging code bug that bombs the activities when run from HeadStartHTML. Only fixed for a couple of activity, still in experimental phase.

--- a/Enabling_01_html/index.html
+++ b/Enabling_01_html/index.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
 		<a href="Enabling_01.html?cssFilename=styles/Enabling_01_dliLearn.css&cssFilename_state2=styles/Enabling_01_dliLearn_state2.css">Enabling 1 - DliLearn style</a><br />
-		<a href="Enabling_01.html?cssFilename=styles/Enabling_01_dliLearn.css&cssFilename_state2=styles/Enabling_01_dliLearn_state2.css&student=instructor@gmail.com&language=ja&lesson=2&activity=1&activityType=cl&logMode=test">Enabling 1 - DliLearn style. Homework logging.</a><br />
+		<a href="Enabling_01.html?xmlPath=sampleData/homework/&cssFilename=styles/Enabling_01_dliLearn.css&cssFilename_state2=styles/Enabling_01_dliLearn_state2.css&student=instructor@gmail.com&language=ja&lesson=2&activity=1&activityType=cl&logMode=test">Enabling 1 - DliLearn style. Homework logging.</a><br />
 	</body>
 </html>
