--- a/Mil_06_html/Mil_06.html
+++ b/Mil_06_html/Mil_06.html
@@ -57,21 +57,21 @@
 				</div>
 				<div id="selections">
 					<div id="sel1" onclick="selectItem(1)">
-						<div class="playSelBtn" onclick="playSelBtn(1)"></div>
+						<div class="playSelBtn" ></div>
 						<div class="selText">Sel1</div>
 						<div class="submitBtn" onclick="submit(1)">
 							<div class="submitText">SUBMIT</div>
 						</div>
 					</div>
 					<div id="sel2" onclick="selectItem(2)">
-						<div class="playSelBtn" onclick="playSelBtn(2)"></div>
+						<div class="playSelBtn"></div>
 						<div class="selText">Sel2</div>
 						<div class="submitBtn" onclick="submit(2)">
 							<div class="submitText">SUBMIT</div>
 						</div>
 					</div>
 					<div id="sel3" onclick="selectItem(3)">
-						<div class="playSelBtn" onclick="playSelBtn(3)"></div>
+						<div class="playSelBtn"></div>
 						<div class="selText">Sel3</div>
 						<div class="submitBtn" onclick="submit(3)">
 							<div class="submitText">SUBMIT</div>
