--- a/Enabling_02_html/Enabling_02.html
+++ b/Enabling_02_html/Enabling_02.html
@@ -25,8 +25,16 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 
-		<h3 class="activity_hd"></h3>
+		<h3 class="activity_hd">Enabling 02</h3>
 		<div class="activity_description">
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.
 		</div>
 
 		<div id="main">
