-resized to fit IPad -Added performanceChecks and param to enable sort (disabled by default because IPad doesn't sort well)

--- a/Glossary/index.html
+++ b/Glossary/index.html
@@ -1,6 +1,9 @@
 <html>
 	<body>
 		<a href="Glossary.html?mediaPath=../../../HeadStart_content/french/media/mil/">Glossary - French External Content</a><br />
+		<a href="Glossary.html?sort=true&mediaPath=../../../HeadStart_content/french/media/mil/">Glossary - French External Content - Sorted</a><br />
 		<a href="Glossary.html?debug=true&mediaPath=../../../HeadStart_content/french/media/mil/">Glossary - French External Content - Debug</a><br />
+		<a href="Glossary.html?performanceChecks=true&debug=true&mediaPath=../../../HeadStart_content/french/media/mil/">Glossary - French External Content - Debug - Performance Checks</a><br />
+		<a href="Glossary.html?sort=true&performanceChecks=true&debug=true&mediaPath=../../../HeadStart_content/french/media/mil/">Glossary - French External Content - Debug - Performance Checks - Sorted</a><br />
 	</body>
 </html>
