--- a/DragDrop_html/DragDrop.html
+++ b/DragDrop_html/DragDrop.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script> -->
+		
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		
 		<title>Drag Drop HTML</title>
@@ -9,12 +11,14 @@
 
 		<script src="../common/js/xml2json.js"></script>
 		<script src="../common/js/dli_activity.js"></script>
-		
+
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
 		
+                <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
 		
@@ -23,10 +27,9 @@
 	<body>
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
 
-		<h3 class="activity_hd">Drag Drop</h3>
-		<div class="activity_description">Click the Play button. Drag the English label onto
-			it's corresponding [target language] label on the map.
-			</div>
+		<h3 class="activity_hd"><!--Drag Drop--></h3>
+		<div class="activity_description"><!--Click the Play button. Drag the English label onto
+			it's corresponding [target language] label on the map.--></div>
 
 		
 		<div id="flashAudioPlayerDiv"></div>
@@ -242,7 +245,7 @@
 							onMouseUp="MM_swapImage('playBtn_s8','','../common/Library/images/playBtn_s2.png',1)" 
 					        onMouseOver="MM_swapImage('playBtn_s8','','../common/Library/images/playBtn_s2.png',1)" > 
 					          <img id="playBtn_s8" class="playBtn"  src="../common/Library/images/playBtn_s1.png" border="0">
-					    	</a> 
+					    	</a>
 					    </div>
 					    
 						<span id="dragBubbleText_8" class="dragBubbleText">Eight</span>
@@ -284,6 +287,6 @@
 			<button id="feedbackBtn" onclick="{closeFeedback();}">Ok</button>
 		</div>
 		
-		
+	        <div id="activityGuard" ></div>	
 	</body>
 </html>
