--- a/Evaluation_01_html/Evaluation_01.html
+++ b/Evaluation_01_html/Evaluation_01.html
@@ -185,7 +185,7 @@
 		<div id="feedback" >
 			<h2 id="feedbackHeader">Set completed</h2>
 			<p id="feedbackText">Set completed text</p>
-			<button id="feedbackBtn" onclick="{closeFeedback();}">Ok</button>
+			<button id="feedbackBtn" onclick="{closeFeedback();}">OK</button>
 		</div>
 		
 		
