--- a/Enabling_02_html/Enabling_02.html
+++ b/Enabling_02_html/Enabling_02.html
@@ -25,8 +25,8 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 
-		<h3 class="activity_hd">Enabling 02</h3>
-		<div class="activity_description">
+		<h3 class="activity_hd"><!--Enabling 02--></h3>
+		<div class="activity_description"><!--
 			Recognize the sounds then key them into the phone.
 			Recognize the sounds then key them into the phone.
 			Recognize the sounds then key them into the phone.
@@ -34,7 +34,7 @@
 			Recognize the sounds then key them into the phone.
 			Recognize the sounds then key them into the phone.
 			Recognize the sounds then key them into the phone.
-			Recognize the sounds then key them into the phone.
+			Recognize the sounds then key them into the phone.-->
 		</div>
 
 		<div id="main">
