--- a/Enabling_08_html/Enabling_08.html
+++ b/Enabling_08_html/Enabling_08.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script> -->
+		
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		
@@ -29,11 +31,11 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 		
-		<h3 class="activity_hd">Enabling 8</h3>
+		<h3 class="activity_hd"><!-- Enabling 8 --></h3>
 		<div class="activity_description">
-			Read the content in the the first speech bubble then 
+			<!-- Read the content in the the first speech bubble then 
 			click on the empty word rectangle to fill the letters. 
-			Drag the letters to the correct spot.
+			Drag the letters to the correct spot. -->
 		</div>
 		
 		<div id="main_container">
