--- a/CardMatch_html/cardMatch.html
+++ b/CardMatch_html/cardMatch.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script>
+		<!--<script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script>-->
 		
 <!--		<meta http-equiv="X-UA-Compatible" content="IE=Edge"> -->
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
