--- a/Enabling_14_html/Enabling_14.html
+++ b/Enabling_14_html/Enabling_14.html
@@ -125,7 +125,7 @@
 						<div id="selectable"></div>
 					</div>
 				</div>
-				<div id="mainContent" class="content" >
+				<div id="mainContent" class="xcontent" >
 
 					<input id="scratchText" name="scratchPad" type="text" style="font-size:27px;width:240px" value="scratch area" />
 
