--- a/Enabling_20_html/Enabling_20.html
+++ b/Enabling_20_html/Enabling_20.html
@@ -8,9 +8,9 @@
 	<script type="text/javascript" src="../common/js/xml2json.js"></script>
 	<script type="text/javascript" src="../common/js/dli_activity.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
-    <link href="../common/css/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 	<link type="text/css" href="../common/css/dlilearn_activities.css" rel="stylesheet" />
-    <link href="../commoncss/jquery.mCustomScrollbar.css" rel="stylesheet">
+    <link href="css/jquery.mCustomScrollbar.css" rel="stylesheet">
 	<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 	<script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
