--- a/Enabling_23_html/Enabling_23.html
+++ b/Enabling_23_html/Enabling_23.html
@@ -68,40 +68,69 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 
-		<h3 class="activity_hd">Enabling 23 | Crossword</h3>
-		<div class="activity_description">
-			Listen to the audio then drag the correct
-			keyword to the corresponding column/row
-			in the crossword.
-		</div>
+		<h3 class="activity_hd"></h3>
+		<div class="activity_description"></div>
 
-		<div id="main" class="roundCorners">
-			<div id="grid_container">
-				<table id="grid"></table>
-			</div>
+		<div id="main" class="roundCorners">  
+		
+		    <div id="firstBox">
+	                     <div id="grid_container">
+			            <table id="grid"></table>
+                	     </div>
 
-			<div id="audioList_container" >
-				<div id="audioLabel">
-					Keywords:
-				</div>
-				<div id="audioList" ></div>
-			</div>
+			     <div id="audioList_container" >
+				     <div id="audioLabel">Keywords:</div>
+                                     <div id="audioList" ></div>
+			     </div>
 
-			<div id="clueList" >
-				<div id="clueLabel">
+			     <div id="clueList" >
+				     <div id="clueLabel">
 					Crossword Clues:
-				</div>
-				<div id="clues">
+				     </div>
+				     <div id="clues"></div>
+			     </div>
 
-				</div>
-			</div>
+			     <div id="videoContainer" class="hidden"></div>
 
-			<div id="videoContainer" class="hidden"></div>
-		</div>
+                     </div>
+		    <div id="hr_sep"></div>
+		    <div id="secondBox">
+                                <div id="keyboardContainer" class="roundCorners unselected"></div>
+                		<div id="statusBar" class="roundCorners">
+                			<div class="btn-group" id="id_prev_next_div">
+                				<button onclick="{prevClicked();}" title="prev" id="set_prev" class="btn btn_prev">
+                					&lt; Prev
+                				</button>
+                				<button onclick="{nextClicked();}" title="next" id="set_next" class="btn btn_next">
+                					Next &gt;
+                				</button>
+          		                </div>
+                			<div id="output"></div>
+                			<div id="setDiv" class="roundCorners">
+                				<div id="setTitle" class="bootstrapLabel btn_set noSelect">
+                					SET:
+                				</div>
+                				<span id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</span>
+                			</div>
+                		</div>
+		                <div id="clickGuard"></div>
+		  	        <div id="feedback" >
+				     <h2 id="feedbackHeader">Set completed</h2>
+				     <p id="feedbackText">
+					Set completed text
+				     </p>
+				     <button id="feedbackBtn" onclick="{closeFeedback();}">
+					Ok
+				     </button>
+			       </div>
+		      </div>
 
-		<div id="hr_sep"></div>
+                      <div id="activityGuard"></div>
+                      
+                      
 
-		<div id="second_row">
+                       <!--
+
 			<div id="keyboardContainer" class="roundCorners unselected"></div>
 	
 			<div id="feedback" >
@@ -113,27 +142,39 @@
 					Ok
 				</button>
 			</div>
-		</div>
 
-		<div id="statusBar" class="roundCorners">
-			<div class="btn-group" id="id_prev_next_div">
-				<button onclick="{prevClicked();}" title="prev" id="set_prev" class="btn btn_prev">
-					&lt; Prev
-				</button>
-				<button onclick="{nextClicked();}" title="next" id="set_next" class="btn btn_next">
-					Next &gt;
-				</button>
-			</div>
 
-			<div id="output"></div>
 
-			<div id="setDiv" class="roundCorners">
-				<div id="setTitle" class="bootstrapLabel btn_set noSelect">
-					SET:
-				</div>
-				<span id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</span>
-			</div>
-		</div>
+
+
+  		      <div id="statusBar" class="roundCorners">
+  			     <div class="btn-group" id="id_prev_next_div">
+  				     <button onclick="{prevClicked();}" title="prev" id="set_prev" class="btn btn_prev">
+  					&lt; Prev
+  				     </button>
+  				     <button onclick="{nextClicked();}" title="next" id="set_next" class="btn btn_next">
+  					Next &gt;
+  				     </button>
+  			     </div>
+  
+  			     <div id="output"></div>
+  
+  			     <div id="setDiv" class="roundCorners">
+  				     <div id="setTitle" class="bootstrapLabel btn_set noSelect">
+  					SET:
+  			   	     </div>
+  				     <span id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</span>
+  			     </div>
+  		      </div>
+		
+		 -->
+		
+		
+
+                </div>
+  
+  
+
 
 		<div id="snippets" class="hidden">
 			<img id="nextBtnClickGuard">
@@ -165,6 +206,6 @@
 			</div>
 		</div>
 
-		<div id="clickGuard"></div>
+
 	</body>
 </html>
