--- a/Enabling_23_html/Enabling_23.html
+++ b/Enabling_23_html/Enabling_23.html
@@ -68,8 +68,12 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 
-		<h3 class="activity_hd"></h3>
-		<div class="activity_description"></div>
+		<h3 class="activity_hd"><!--Enabling 23 | Crossword--></h3>
+		<div class="activity_description"><!--
+			Listen to the audio then drag the correct
+			keyword to the corresponding column/row
+			in the crossword.-->
+		</div>
 
 		<div id="main" class="roundCorners">  
 		
