--- a/Enabling_29_html/Enabling_29.html
+++ b/Enabling_29_html/Enabling_29.html
@@ -31,8 +31,8 @@
 	<div id="htmlAudioPlayerDiv"></div>
 	<div id="embeddedAudioPlayerDiv"></div>
 
-	<h3 class="activity_hd noSelect">Enabling 29</h3>
-	<div class="activity_description noSelect">The activity description</div>
+	<h3 class="activity_hd noSelect"><!--Enabling 29--></h3>
+	<div class="activity_description noSelect"><!--The activity description--></div>
 
 	<div id="main">
 		<div id="feedback">
