--- a/Evaluation_02_html/Evaluation_02.html
+++ b/Evaluation_02_html/Evaluation_02.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script> -->
+		
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<title>Evaluation 2 HTML</title>
@@ -32,8 +34,8 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 		
-		<h3 class="activity_hd">Evaluation 2</h3>
-		<div class="activity_description">Click on the blank where a Swahili word is missing and a drop-down menu will appear. Select the word that best fits into the blank. Once all five screens have been completed, click the "submit" button.</div>	
+		<h3 class="activity_hd"><!--Evaluation 2--></h3>
+		<div class="activity_description"><!--Click on the blank where a Swahili word is missing and a drop-down menu will appear. Select the word that best fits into the blank. Once all five screens have been completed, click the "submit" button.--></div>	
 	
 		<div id="main">	
 			<div id="item_container0" class="item_container roundCorners">
