--- a/Evaluation_03_html/evaluation_03.html
+++ b/Evaluation_03_html/evaluation_03.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script> -->
+		
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<title>Evaluation 3 HTML</title>
@@ -10,10 +12,12 @@
 		<script src="../common/js/xml2json.js"></script>
 		<script src="../common/js/dli_activity.js"></script>
 		
+                <link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+		<script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -28,8 +32,8 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 		
-		<h3 class="activity_hd">Evaluation 3</h3>
-		<div class="activity_description">Read the condition carefully. It will ask you either how to properly state something or to give the correct answer to a question. If you need to answer a question, play the video on the left of the screen and select the best answer from the choices below. Each can be viewed by selecting the corresponding play button. If you need to properly state something, no video will be shown on the left. In that case, check the three options in the lower screen and click "submit" next to the best selection.</div>
+		<h3 class="activity_hd"><!--Evaluation 3--></h3>
+		<div class="activity_description"><!--Read the condition carefully. It will ask you either how to properly state something or to give the correct answer to a question. If you need to answer a question, play the video on the left of the screen and select the best answer from the choices below. Each can be viewed by selecting the corresponding play button. If you need to properly state something, no video will be shown on the left. In that case, check the three options in the lower screen and click "submit" next to the best selection.--></div>
 
 		<div id="main">	
 			
