--- a/Enabling_68_html/Enabling_68.html
+++ b/Enabling_68_html/Enabling_68.html
@@ -29,7 +29,7 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 		
-		<h3 class="activity_hd">Enabling 68a | Sentence Completion</h3>
+		<h3 class="activity_hd"><!--Enabling 68a | Sentence Completion--></h3>
 		<div class="activity_description"><!--
 			Click the Play button and listen to the TL sentence. 
 			Next, select the correct image that corresponds with 
@@ -197,9 +197,9 @@
 		<div id="clickGuard"></div>
 		
 		
-
+		<!--
         	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.js"></script>
-        	<script>$.event.special.mousewheel || document.write('<script src="../common/js/jquery.mousewheel.js"><\/script>')</script>
+        	<script>$.event.special.mousewheel || document.write('<script src="../common/js/jquery.mousewheel.js"><\/script>')</script>-->
                 <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
         	<script>
         		(function($){
