--- a/Mil_02_html/Mil_02.html
+++ b/Mil_02_html/Mil_02.html
@@ -139,7 +139,7 @@
 		<div id="feedback" >
 			<h2 id="feedbackHeader">Set completed</h2>
 			<p id="feedbackText">Set completed text</p>
-			<button id="feedbackBt class="btn" onclick="{closeFeedback();}">Ok</button>
+			<button id="feedbackBtn" class="btn" onclick="{closeFeedback();}">Ok</button>
 		</div>
 
 	</body>
