--- a/Mil_04_html/Mil_04.html
+++ b/Mil_04_html/Mil_04.html
@@ -11,11 +11,13 @@
 		<script src="../common/js/xml2json.js"></script>
 		<script src="../common/js/dli_activity.js"></script>
 		<!--<link type="text/css" href="../common/css/bootstrap.css" rel="stylesheet" /> -->
-		
+
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+                <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -88,7 +90,7 @@
 					<div id="movieImg">  
 							  <img src="../common/Library/images/movie01.png" border="0">
 					</div>
-					
+
 				</div>
 			</div>
 			<div id="feedback" >
@@ -116,7 +118,8 @@
 		<div id="id_main_menu_8" class="css_menu_def"></div>
 		
 		<div id="clickGuard"></div>
-		
-		
+                <div id="clickGuardActivity"></div>
+
+
 	</body>
 </html>
