--- a/Enabling_10_html/Enabling_10.html
+++ b/Enabling_10_html/Enabling_10.html
@@ -25,7 +25,7 @@
 	</head>
 	<body>
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
-		<h3 class="activity_hd">Enabling 10</h3>
+		<h3 class="activity_hd"></h3>
 		<div class="activity_description">
 			
 		</div>
