--- a/Enabling_68_html/Enabling_68.html
+++ b/Enabling_68_html/Enabling_68.html
@@ -29,16 +29,8 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 		
-		<h3 class="activity_hd"><!--Enabling 68a | Sentence Completion--></h3>
-		<div class="activity_description"><!--
-			Click the Play button and listen to the TL sentence. 
-			Next, select the correct image that corresponds with 
-			the...Click the Play button and listen to the TL sentence. 
-			Next, select the correct image that corresponds with 
-			the...Click the Play button and listen to the TL sentence. 
-			Next, select the correct image that corresponds with 
-			the...-->
-		</div>
+		<h3 class="activity_hd"></h3>
+		<div class="activity_description"></div>
 
 		<div id="main" class="roundCorners hidden">
 			<div id="img_container">
@@ -197,9 +189,9 @@
 		<div id="clickGuard"></div>
 		
 		
-		<!--
+                <!--
         	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.js"></script>
-        	<script>$.event.special.mousewheel || document.write('<script src="../common/js/jquery.mousewheel.js"><\/script>')</script>-->
+        	<script>$.event.special.mousewheel || document.write('<script src="../common/js/jquery.mousewheel.js"><\/script>')</script>   -->
                 <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
         	<script>
         		(function($){
