--- a/Mil_05_html/Mil_05.html
+++ b/Mil_05_html/Mil_05.html
@@ -13,11 +13,12 @@
 		<script src="../common/js/dli_activity.js"></script>
 		
 		<!--<link type="text/css" href="../common/css/bootstrap.css" rel="stylesheet" />-->
-		
+                <link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+                <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -100,10 +101,26 @@
 					<div id="setTitle" class="bootstrapLabel btn_set noSelect">SET</div>
 					<span id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</span>
 				</div> 
-			</div>	
+			</div>
 		</div>
 			
 		<div id="clickGuard"></div>
+                <!--
+        	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.js"></script>
+        	<script>$.event.special.mousewheel || document.write('<script src="../common/js/jquery.mousewheel.js"><\/script>')</script>   -->
+                <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
+        	<script>
+        		(function($){
+        			$(window).load(function(){
+        				$("#TLtext0, #TLtext1, #TLtext2, #ENtext0, #ENtext1, #ENtext2").mCustomScrollbar({
+        					advanced:{
+        						updateOnContentResize:true     
+        					}
+        				});
+        			});
+        		})(jQuery);
+        	</script>
+
 		
 	</body>
 </html>
