--- a/Enabling_08_html/Enabling_08.html
+++ b/Enabling_08_html/Enabling_08.html
@@ -42,11 +42,11 @@
 			<div id="main" class="roundCorners">
 				<div id="statusBar"  class="roundCorners">
 					<div id="conversationTally_container" class="roundCorners">
-						<div id="conversationTitle">Conversations</div>
+						<div id="conversationTitle">Conversations
 						<div id="conversationArrow" class="hidden"><a href="javascript:;" 
 							onmousedown="conversationArrowPressed()">
 								<img src="../common/img/arrow_grey_right.png">
-							</a></div>
+							</a></div></div>
 						<div id="conversationLinks"></div>
 					</div>
 					
