--- a/Enabling_09_html/Enabling_09.html
+++ b/Enabling_09_html/Enabling_09.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 <!--		<script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script>  -->
+
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		
 		<title>Enabling 9 HTML</title>
@@ -23,14 +24,14 @@
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_video.js"></script>
-		
+
 		<script src="Enabling_09.js"></script>
 	</head>
 	<body>
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
 		
-		<h3 class="activity_hd">Instructions:</h3>
-		<div class="activity_description">Activity description lorem ipsum...</div>
+		<h3 class="activity_hd"></h3>
+		<div class="activity_description"></div>
 		
 		<div id="main">
 			<div id="dropTargets">
@@ -135,6 +136,6 @@
 			<p id="feedbackText">Set completed text</p>
 			<button id="feedbackBtn" class="btn" onclick="{closeFeedback();}">Ok</button>
 		</div>
-		
+				
 	</body>
 </html>
