--- a/Enabling_11_html/Enabling_11.html
+++ b/Enabling_11_html/Enabling_11.html
@@ -10,11 +10,13 @@
 		<script src="../common/js/xml2json.js"></script>
 		<script src="../common/js/dli_activity.js"></script>
 		<!--<link type="text/css" href="../common/css/bootstrap.css" rel="stylesheet" /> -->
-		
+
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+                <script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -116,7 +118,7 @@
 		
 		
 		<div id="clickGuard"></div>
-		
+                <div id="clickGuardActivity"></div>		
 		
 	</body>
 </html>
