--- a/Mil_01_html/Mil_01.html
+++ b/Mil_01_html/Mil_01.html
@@ -48,10 +48,10 @@
 	</head>
 	<body>
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
-		<h3 class="activity_hd">Military 1</h3>
+		<!-- h3 class="activity_hd">Military 1</h3>
 		<div class="activity_description">
 			Listen to each Japanese word or phrase by clicking on the corresponding play button. Repeat the process until you are comfortable with both listening and speaking. Use the tabs at the top of the list of terms to navigate between their English, Transliteration, and Japanese versions. Use the scroll bar to scroll to the last phrase.
-		</div>
+		</div -->
 		<div id="main">
 			<div id="tabs" class="allTabs">
 				<ul>
