-Fixes for  "Glossary #37"   Added mCustom scrollbar   Added play btn icon next to item

--- a/Glossary/Glossary.html
+++ b/Glossary/Glossary.html
@@ -10,13 +10,17 @@
 
 		<script src="../common/js/xml2json.js"></script>
 		<script src="../common/js/dli_activity.js"></script>
+
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<!--<script type="text/javascript" src="jquery-1.10.1.js"></script>-->
 		<!--<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>-->
-		<!-- custom scrollbars plugin -->
+		
+		<script src="../common/js/jquery.mCustomScrollbar.js"></script>
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
@@ -87,6 +91,14 @@
 			<div id="filterBtnSnip">
 				<div class="filterBtn" onclick="filterBtnClicked(this)">
 				</div>
+			</div>
+			<div id="itemSnip">
+				<li class="ui-widget-content enw_li" modulenum="" tasknum="">
+					<div>
+						<div class="playItemBtn"></div> 
+			 			<div class="label"></div>
+					</div>
+				</li>
 			</div>
 		</div>
 	</body>
