--- a/Mil_06_html/Mil_06.html
+++ b/Mil_06_html/Mil_06.html
@@ -59,21 +59,21 @@
 					<div id="sel1" onclick="selectItem(1)">
 						<div class="playSelBtn" ></div>
 						<div class="selText">Sel1</div>
-						<div class="submitBtn" onclick="submit(1)">
+						<div class="submitBtn" onclick="submit(event, 1)">
 							<div class="submitText">SUBMIT</div>
 						</div>
 					</div>
 					<div id="sel2" onclick="selectItem(2)">
 						<div class="playSelBtn"></div>
 						<div class="selText">Sel2</div>
-						<div class="submitBtn" onclick="submit(2)">
+						<div class="submitBtn" onclick="submit(event,2)">
 							<div class="submitText">SUBMIT</div>
 						</div>
 					</div>
 					<div id="sel3" onclick="selectItem(3)">
 						<div class="playSelBtn"></div>
 						<div class="selText">Sel3</div>
-						<div class="submitBtn" onclick="submit(3)">
+						<div class="submitBtn" onclick="submit(event,3)">
 							<div class="submitText">SUBMIT</div>
 						</div>
 					</div>
