--- a/Enabling_07_html/Enabling_07.html
+++ b/Enabling_07_html/Enabling_07.html
@@ -14,9 +14,12 @@
 		<script src="../common/js/dli_activity.js"></script>
 		
 		<link type="text/css" href="../common/css/smoothness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
+		<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+		
 		<script type="text/javascript" src="../common/js/jquery-1.7.2.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 		<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
+		<script type="text/javascript" src="../common/js/jquery.mCustomScrollbar.js"></script>		
 
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_audio.js"></script>
