--- a/Enabling_14a_html/Enabling_14a.html
+++ b/Enabling_14a_html/Enabling_14a.html
@@ -27,9 +27,9 @@
 		<div id="htmlAudioPlayerDiv"></div>
 		<div id="embeddedAudioPlayerDiv"></div>
 
-		<h3 class="activity_hd">Enabling 14a</h3>
+		<h3 class="activity_hd"><!--Enabling 14a--></h3>
 		<div class="activity_description">
-			Recognize the sounds then key them into the phone.
+			<!--Recognize the sounds then key them into the phone.-->
 		</div>
 		<div id="main">
 			<div id="phone">
@@ -101,15 +101,15 @@
 						#
 					</div>
 				</div>
-				<div id="num_send" class="controlbtn number" onmousedown="callPressed()">
+				<div id="num_send" class="controlbtn number" onmousedown="callPressed()" title="Call">
 					<div>
 						SEND
 					</div>
 				</div>
-				<div id="num_play" class="controlbtn number" onmousedown="playCall()">
+				<div id="num_play" class="controlbtn number" onmousedown="playCall()" title="Play">
 					<img id="playBtn"  src="../common/Library/images/btn_arrow_caro_right.png"/>
 				</div>
-				<div id="num_end" class="controlbtn number" onmousedown="delClicked()">
+				<div id="num_end" class="controlbtn number" onmousedown="delClicked()" title="Delete">
 					<div>
 						DEL
 					</div>
