--- a/Enabling_08_html/Enabling_08.html
+++ b/Enabling_08_html/Enabling_08.html
@@ -23,6 +23,9 @@
 		<script src="../common/js/dli_video.js"></script>
 		
 		<script src="Enabling_08.js"></script>
+        	<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+            <script src="../common/js/jquery.mousewheel.min.js"></script>
+            <script src="../common/js/jquery.mCustomScrollbar.js"></script>
 	</head>
 	<body>
 		<noscript>Activity cannot load. No Javascript support detected.</noscript>
@@ -63,7 +66,7 @@
 					
 					<div id="feedback" >
 						<h2 id="feedbackHeader">Set completed</h2>
-						<p id="feedbackText">Set completed text</p>
+						<p id="feedbackText" class="content2 mCustomScrollbar">Set completed text</p>
 						<button id="feedbackBtn" onclick="{closeFeedback();}">Ok</button>
 					</div>
 				</div>
