-Fix for " Glossary - Sorting #192 " 	Fixed module/task filter issues and item numbers when filtered.

--- a/Glossary/Glossary.html
+++ b/Glossary/Glossary.html
@@ -93,7 +93,7 @@
 				</div>
 			</div>
 			<div id="itemSnip">
-				<li class="ui-widget-content enw_li" modulenum="" tasknum="">
+				<li class="ui-widget-content enw_li" onclick="listItemSelected(this, event)" modulenum="" tasknum="">
 					<div>
 						<div class="playItemBtn"></div> 
 			 			<div class="label"></div>
