--- a/Mil_04_html/Mil_04.html
+++ b/Mil_04_html/Mil_04.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script>
+		<!-- <script type="text/javascript" src="../common/js/firebug-lite-1_2.js"></script> -->
 				
 		<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 		<title>Mil 04 HTML</title>
