--- a/Enabling_02_html/Enabling_02.html
+++ b/Enabling_02_html/Enabling_02.html
@@ -144,16 +144,15 @@
 					</div>
 					<span id="setText" class="bootstrapLabel btn_set_value noSelect">1/3</span>
 				</div>
-                               <!--
+
 				<div class="btn-group" id="id_prev_next_div">
 					<button onclick="{prevClicked();}" title="prev" id="set_prev" class="btn btn_prev">&lt; Prev</button>
 					<button onclick="{nextClicked();}" title="next" id="set_next" class="btn btn_next">Next &gt;</button>
-				</div> -->
+				</div>
 			</div>
 
 			<div id="clickGuard" ></div>
-			<div id="activityClickGuard" ></div>
-
+			
 			<div id="nextBtnClickGuard"  style="display:none;">
 			<div id="prevBtnClickGuard"  style="display:none;">
 				
