-Added audio playback

--- a/WarmUp_03_html/WarmUp_03.html
+++ b/WarmUp_03_html/WarmUp_03.html
@@ -19,6 +19,7 @@
 		
 		<script src="../common/js/dli_util.js"></script>
 		<script src="../common/js/dli_video.js"></script>
+		<script src="../common/js/dli_audio.js"></script>
 		
 		<script src="WarmUp_03.js"></script>
 		
@@ -32,6 +33,9 @@
 		<div class="activity_description">Click on any English word.
 			Listen to the audio and look at the picture. Select the 
 			matching Target Language...</div>
+		<div id="flashAudioPlayerDiv"></div>
+		<div id="htmlAudioPlayerDiv"></div>
+		<div id="embeddedAudioPlayerDiv"></div>
 		<div id="main">
 			<div id="buttonContainer">
 				<div id="leftCol">
