WarmUp_07 -Added activity completed support and highlighting of completed letters.

--- a/WarmUp_07_html/index.html
+++ b/WarmUp_07_html/index.html
@@ -1,5 +1,5 @@
 <html>
 	<body>
-		<a href="WarmUp_07.html?cssFilename=styles/Enabling_01_dliLearn.css&cssFilename_state2=styles/Enabling_01_dliLearn_state2.css">Enabling 1 - DliLearn style</a><br />
+		<a href="WarmUp_07.html">Enabling 1 - DliLearn style</a><br />
 	</body>
 </html>
