WarmUp_07_html -Started adding support for Japanese ruby tag -Added support for bolding the item character in the example words

--- a/WarmUp_07_html/index.html
+++ b/WarmUp_07_html/index.html
@@ -1,5 +1,6 @@
 <html>
 	<body>
-		<a href="WarmUp_07.html">Enabling 1 - DliLearn style</a><br />
+		<a href="WarmUp_07.html">WarmUp 7</a><br />
+		<a href="WarmUp_07.html?xmlFilename=sampleData/WarmUp_07_Japanese_sampleData.xml">WarmUp 7 - Japanese</a><br />
 	</body>
 </html>
