--- a/Enabling_16_html/Enabling_16.html
+++ b/Enabling_16_html/Enabling_16.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" >
 	
 	<title>Enabling 16</title>
 	<script src="../common/js/xml2json.js"></script>
@@ -13,17 +13,23 @@
 	<script type="text/javascript" src="../common/js/jquery-ui-1.8.20.custom.min.js"></script>
 	<script type="text/javascript" src="../common/js/jquery.ui.touch-punch.js"></script>
 	<script src="../common/js/dli_util.js"></script>
-    <script src="js/enabling_16.js"></script>
-        <script src="js/swfobject.js"></script>
-    <script src="js/audioPlayer.js"></script>
- 
-
 	
+	<script src="../common/js/dli_activity.js"></script>
 	
+	<script src="js/enabling_16.js"></script>
+	<script src="js/swfobject.js"></script>
+	<script src="js/audioPlayer.js"></script>
+	
+	<link href="../common/css/bootstrap.css" rel="stylesheet">
+	<link href="../common/css/dlilearn_custom.css" rel="stylesheet">
+	<!-- <link href="../common/css/dlilearn_activities.css" rel="stylesheet"> -->
+	
+	<link href="../common/css/jquery.mCustomScrollbar.css" rel="stylesheet" type="text/css" />
+	<script src="../common/js/jquery.mousewheel.min.js"></script>
+	<script src="../common/js/jquery.mCustomScrollbar.js"></script>
 </head>
 
 <body>
 	<div id="HTML5"> </div>
-     
 </body>
 </html>
