--- a/WarmUp_07_html/index.html
+++ b/WarmUp_07_html/index.html
@@ -1,5 +1,7 @@
 <html>
 	<body>
+		<p>Note- WarmUp_08_html is also rolled into this activity</p>
+		
 		<a href="WarmUp_07.html">WarmUp 7</a><br />
 		<a href="WarmUp_07.html?disableHighlighting=true">WarmUp 7 - disableHighlighting</a><br />
 		<a href="WarmUp_07.html?xmlFilename=sampleData/WarmUp_07_Japanese_sampleData.xml">WarmUp 7 - Japanese</a><br />
