--- a/WarmUp_08_html/index.html
+++ b/WarmUp_08_html/index.html
@@ -2,7 +2,7 @@
 <body> 
 	<p>Note- This project currently relies on WarmUp_07_html. All links
 		below require that WarmUp_07_html be a sibling directories.</p>
-	
-	<a href="../WarmUp_07_html/WarmUp_07.html?mediaPath=../WarmUp_08_html/sampleData/&xmlFilename=../WarmUp_08_html/sampleData/WarmUp_08_sampleData.xml">WarmUp 8</a><br />
+	<a href="../WarmUp_07_html/WarmUp_07.html?mediaPath=../WarmUp_08_html/sampleData/&xmlFilename=../WarmUp_08_html/sampleData/WarmUp_08_sampleData.xml">WarmUp 8- RTL</a><br />
+	<a href="../WarmUp_07_html/WarmUp_07.html?mediaPath=../WarmUp_08_html/sampleData/&xmlFilename=../WarmUp_08_html/sampleData/WarmUp_08_sampleData_english.xml">WarmUp 8- English</a><br />
 </body>
 </html>
